--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -54,10 +54,10 @@ header {
  }
 }
 
-p#notice{ //#はpにあるid=notice
-  margin: 0px;
-  background-color: #fff;
-}
+// p#notice{ //#はpにあるid=notice
+//   margin: 0px;
+//   background-color: #fff;
+// }
 
 .main-header {
  padding-bottom: 15%;
@@ -150,4 +150,9 @@ body {
  &:hover {
   opacity: 0.7;
  }
+}
+
+.flash {
+ color: white;
+ padding-top: 10px;
 }
