--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,5 +1,5 @@
   <section class="main-header">
-   <p id="notice"><%= notice %></p>
+   <p class="flash"><%= notice %><%= alert %></p>
    <img src="<%= asset_path "achieve.png" %>">
   </section>
   <section>
