--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -19,7 +19,7 @@
       </div>
     
       <div class="field">
-        <%= f.password_field :password_confirmation, autocomplete: "off", class: "form_control", placeholder: "パスワード（確認）" %>
+        <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control", placeholder: "パスワード（確認）" %>
       </div>
     
       <div class="actions">
