--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
          <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete %></li>
         <% else %>
          <li><%= link_to 'ログイン', new_user_session_path %></li>
-         <li><%= link_to 'サインアップ', new_user_session_path %></li>
+         <li><%= link_to 'サインアップ', new_user_registration_path %></li>
         <% end %>
       </ul>
     </div><!-- /.navbar-collapse -->
