--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,7 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><%= link_to "ブログ", blogs_path %></li>
+            <li><%= link_to "ポエム", poems_path %></li>
           </ul>
         </li>
         <% if user_signed_in? %>
@@ -43,13 +44,13 @@
   </div><!-- /.container-fluid -->
 </nav>
   </header>
-  
+
 <%= yield %>
 
   <footer>
    <p>運営会社DIVE INTO CODE株式会社</p>
    <p>© 2015-2016 Copyright DIVE INTO CODE Corp.</p>
   </footer>
-  
+
 </body>
 </html>
