--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,49 +1,58 @@
 <div class="container">
   <div class="wrapper col-md-4 col-md-offset-4 col-sm-10">
     <h2>マイページ</h2>
-    
+
     <%= alert %>
-    
+
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
       <%= devise_error_messages! %>
-    
+
       <div class="field">
         <%= f.email_field :email, autofocus: true, class: "form-control", placeholder: "メールアドレス" %>
       </div>
-      
+
       <div class="field">
         <%= f.text_field :name, class: "form-control", placeholder: "名前" %>
       </div>
-    
+
+      <% if @user.provider.blank? %>
+
       <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
         <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
       <% end %>
-    
+
       <div class="field">
-        <br />
-        <em>パスワードは <%= @minimum_password_length %> 文字以上で入力してください</em>
-        <%= f.password_field :password, autocomplete: "off", class: "form-control", placeholder: "新規パスワード" %>
-        <% if @minimum_password_length %>
-        <% end %>
+        <%= f.label :password %><i>(leave blank if you don't want to change it)</i><br />
+        <%= f.password_field :password, autocomplete: "off", class: "form-control" %>
       </div>
-      
+
       <div class="field">
-        <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control", placeholder: "新規パスワード（確認）" %>
+        <%= f.label :password_confirmation%><br />
+        <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control" %>
       </div>
-    
+
       <div class="field">
-        <%= f.password_field :current_password, autocomplete: "off", class: "form-control", placeholder: "現在のパスワード" %>
+        <%= f.label :current_password %><i>(we need your current password to confirm your changes)</i><br />
+        <%= f.password_field :current_password, autocomplete: "off", class: "form-control" %>
       </div>
-    
+
+      <% end %>
+
+      <div class="field">
+        <%= profile_img(@user) if profile_img(@user) %>
+        <%= f.file_field :avatar %>
+        <%= f.hidden_field :avatar_cache %>
+      </div>
+
       <div class="actions">
-        <%= f.submit "情報を変更する", class: "btn btn-primary btn-block" %>
+        <%= f.submit "更新", class: "btn btn-primary btn-block" %>
       </div>
     <% end %>
-    
+
     <h3>アカウントの削除</h3>
-    
+
     <p>アカウントを削除しますがよろしいですか? <%= button_to "アカウントの削除", registration_path(resource_name), class: "btn btn-danger btn-sm", data: { confirm: "アカウントを削除してしまいますがよろしいですか?" }, method: :delete %></p>
-    
+
     <%= link_to "Back", :back %>
   </div>
 </div>
