--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,11 +1,12 @@
 <div class="container">
   <div class="wrapper col-md-8 col-md-offset-2 col sm-10">
     <p><%= notice %></p>
-    
+
     <h1>ブログ一覧</h1>
      <%= link_to "ブログを作成する", new_blog_path, class: 'btn btn-default' %>
     <% @blogs.each do |blog| %>
     <div class="row">
+      <%= profile_img(blog.user)%>
       <h3><%= blog.user.name %></h3>
       <h4><strong><%= blog.title %></strong></h4>
       <p><%= blog.content %></p>
