--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -6,9 +6,10 @@
      <%= link_to "ブログを作成する", new_blog_path, class: 'btn btn-default' %>
     <% @blogs.each do |blog| %>
     <div class="row">
-      <%= profile_img(blog.user)%>
-      <h3><%= blog.user.name %></h3>
-      <h4><strong><%= blog.title %></strong></h4>
+      <%= link_to blog_path(blog) do %>
+       <h4><strong><%= blog.title %></strong></h4>
+      <% end %>
+
       <p><%= blog.content %></p>
       <%= link_to "編集", edit_blog_path(blog.id), class: 'btn btn-default btn-success' %>
       <%= link_to "削除", blog_path(blog.id), method: :delete, data: { confirm: "本当に削除していいいですか？" }, class: 'btn btn-default btn-sm btn btn-danger' %>
