--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="wrapper col-md-8 col-md-offset-2 col sm-10">
+  <div class="wrapper col-md-8 col-md-offset-2 col-sm-10">
     <p><%= notice %></p>
 
     <h1>ブログ一覧</h1>
