--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,7 +4,15 @@
       <div class="container-child col-md-3 col-sm-3 col-xs-6 ">
         <p class="user-image"><%= link_to profile_img(user), user_path(user) %></p>
         <p class="user-email"><%= user.email %></p>
-        <p><%= render 'follow_form', user: user %></p>
+        <% if user.id != current_user.id %>
+          <li>
+            <div class="item">
+              <%= link_to user.name, user %>
+              <%= link_to 'メッセージ', conversations_path(sender_id: current_user.id, recipient_id: user.id), method: 'post'%>
+            </div>
+            <%= render partial: 'follow_form', locals: { user: user } if signed_in? %>
+          </li>
+        <% end%>
       </div>
   <% end %>
 </div>
